--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-server.port=8073
-
-spring.datasource.url=jdbc:mysql://localhost:3007/testdb
+server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3009/air_manager
 spring.datasource.username=root
 spring.datasource.password=pass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
